examples/gateway-grpcroute-via-http.yaml
# NOTE The Gateway APIs are not yet available by default in Kubernetes.
# Follow these instructions to install them before using this example:
# https://gateway-api.sigs.k8s.io/guides/#install-experimental-channel
---
apiVersion: v1
kind: Service
metadata:
  name: grpcbin-via-http
  labels:
    app: grpcbin-via-http
  annotations:
    konghq.com/protocol: grpc
spec:
  ports:
  - name: grpc
    port: 80
    targetPort: 9000
  selector:
    app: grpcbin-via-http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcbin-via-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcbin-via-http
  template:
    metadata:
      labels:
        app: grpcbin-via-http
    spec:
      containers:
      - image: kong/grpcbin
        name: grpcbin-via-http
        ports:
        - containerPort: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: grpc
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: grpcbin-via-http
spec:
  parentRefs:
  - name: kong
  hostnames:
  - example-grpc-via-http.com
  rules:
  - backendRefs:
    - name: grpcbin-via-http
      port: 80
    matches:
    - method:
        service: "grpcbin.GRPCBin"
        method: "DummyUnary"
