examples/gateway-httproute-rewrite-path-prefix.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: mendhak/http-https-echo:31
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-path
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /foo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: echo
          port: 80

# Request Path | Prefix Match | Replace Prefix | Modified Path
# -------------|--------------|----------------|----------
# /foo/bar     | /foo         | /xyz           | /xyz/bar          PASS
# /foo/bar     | /foo         | /xyz/          | /xyz/bar          PASS
# /foo/bar     | /foo/        | /xyz           | /xyz/bar          PASS
# /foo/bar     | /foo/        | /xyz/          | /xyz/bar          PASS
# /foo         | /foo         | /xyz           | /xyz              FAIL (modified to /xyz/)
# /foo/        | /foo         | /xyz           | /xyz/             PASS
# /foo/bar     | /foo         | <empty string> | /bar              PASS
# /foo/        | /foo         | <empty string> | /                 PASS
# /foo         | /foo         | <empty string> | /                 PASS
# /foo/        | /foo         | /              | /                 PASS
# /foo         | /foo         | /              | /                 PASS
