examples/konnect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-deployment
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: kong/httpbin:0.1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/konnect-service: "HTTPBinDeployment"
  labels:
    app: httpbin
  name: httpbin-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-external
  annotations:
    konghq.com/konnect-service: "ExternalHTTPBin"
spec:
  type: ExternalName
  externalName: httpbin.org
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  annotations:
    httpbin.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - http:
      paths:
      - path: /httpbin
        pathType: Prefix
        backend:
          service:
            name: httpbin-service
            port:
              number: 80
      - path: /httpbin-external
        pathType: Prefix
        backend:
          service:
            name: httpbin-external
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress2
  annotations:
    httpbin.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
    - host: "foo.bar"
      http:
        paths:
          - path: /httpbin2
            pathType: Prefix
            backend:
              service:
                name: httpbin-service
                port:
                  number: 80
          - path: /httpbin2-other
            pathType: Prefix
            backend:
              service:
                name: httpbin-service
                port:
                  number: 80
    - host: "poo.foo.bar"
      http:
        paths:
          - path: /httpbin2
            pathType: Prefix
            backend:
              service:
                name: httpbin-service
                port:
                  number: 80
          - path: /httpbin2-other
            pathType: Prefix
            backend:
              service:
                name: httpbin-service
                port:
                  number: 80
